add large padding styles for wide screens to search results, footer elements, project meta info elements

--- a/web/assets/scss/components/_footer.scss
+++ b/web/assets/scss/components/_footer.scss
@@ -16,6 +16,9 @@
       width: 50%;
       float: right;
     }
+    @include media-lg {
+      padding: $padding-lg $padding-lg ($padding-lg - $beat);
+    }
   }
 
   .copyright {
