--- a/web/assets/scss/components/_rows.scss
+++ b/web/assets/scss/components/_rows.scss
@@ -44,6 +44,9 @@
       @include media-md {
         margin-top: $padding;
       }
+      @include media-lg {
+        margin-top: $padding-lg;
+      }
     }
   }
 
