--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -93,7 +93,7 @@
   </div>
 
   <!-- people -quarters -->
-  <section class="big-margin-vertical" id="people">
+  <section id="people">
     <ul class="row -quarters photo-row-separators semantic-only-list infinite-scroll-container">
       {% for person in peopleEntries %}
         <li class="row-block infinite-scroll-object">
