add frontend support for Entries List media block for about page, add margin above footer on about page, fix html error on contact page

--- a/templates/partials/_media-blocks.html
+++ b/templates/partials/_media-blocks.html
@@ -24,6 +24,8 @@
           {% include 'partials/media-blocks/_video' %}
         {% case "linkGrid" %}
           {% include 'partials/media-blocks/_link-grid' %}
+        {% case "entriesList" %}
+          {% include 'partials/media-blocks/_entries-list' %}
         {% endswitch %}
       </div>
 
