--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -43,6 +43,7 @@
 // Pages
 @import "pages/pages";
 @import "pages/homepage";
+@import "pages/about";
 @import "pages/services";
 @import "pages/awards";
 @import "pages/contact";
