--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -134,7 +134,7 @@
       &.search-open {
         position: absolute;
         right: 0;
-        bottom: 0;
+        bottom: 4px;
         padding: 0;
       }
     }
