make search in nav an a element to inherit behavior + styles, fix positioning of search on mobile and desktop

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -23,7 +23,7 @@
         <a href="/contact/">Contact</a>
       </li>
       <li class="search-open">
-        Search<svg class="icon-search"><use xlink:href="#icon-search" /></svg>
+        <a href="/search/">Search<svg class="icon-search"><use xlink:href="#icon-search" /></svg></a>
       </li>
     </ul>
 
