adjust two-figure stats only on media-md and up

--- a/templates/about/careers/index.html
+++ b/templates/about/careers/index.html
@@ -14,7 +14,7 @@
       {% include '/partials/_media-blocks' %}
     </div>
 
-    <div class="row -single big-margin-vertical -spaced">
+    <div class="row -single -spaced">
       <div class="row-block">
         <div class="module text-module  ">
           <h3 class="font-h1">Interested?</h3>
