--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -10,7 +10,7 @@
   <h2 class="font-nav"><a href="/people/">People</a></h2>
   <ul class="filters semantic-only-list">
     {% for cat in craft.categories.group('peopleTypes').all() %}
-      <li class="{% if cat.id == personType.id or cat.id in secondaryPersonTypeIds %}active{% endif %}">
+      <li class="{% if (personType and cat.id == personType.id) or (cat.id in secondaryPersonTypeIds) %}active{% endif %}">
         <a href="{{ cat.url }}">{{ cat.title }}</a>
       </li>
     {% endfor %}
@@ -108,6 +108,8 @@
     }
   %}
 
-  {% include "partials/_pagination_structure" with {'paginationSection': 'people', 'postName': 'in ' ~ personType.title, 'category': personType } %}
+  {% if personType %}
+    {% include "partials/_pagination_structure" with {'paginationSection': 'people', 'postName': 'in ' ~ personType.title, 'category': personType } %}
+  {% endif %}
 
 {% endblock %}
