don't initialize slick carousel on quote modules with single quotes, fix margins and hanging quote on desktop quotes

--- a/templates/partials/media-blocks/_quotes.html
+++ b/templates/partials/media-blocks/_quotes.html
@@ -1,7 +1,7 @@
 <div class="module quotes-module">
   <div class="quote-carousel -unslicked">
     {% for row in block.quotes.all() %}
-      <blockquote class="no-margin">
+      <blockquote>
         <span class="hang">&ldquo;</span>{{ row.quote }}&rdquo;
         {% set person = row.aeiPerson.one() %}
         {% if person %}
