--- a/web/assets/scss/components/_base.scss
+++ b/web/assets/scss/components/_base.scss
@@ -34,6 +34,10 @@ blockquote {
     margin-left: -14px;
     padding-left: 14px;
   }
+  @include media-xl {
+    margin-left: -18px;
+    padding-left: 18px;
+  }
 
   .hang {
     position: absolute;
