bring back project color hovers

--- a/web/assets/scss/helpers/_color-scheme.scss
+++ b/web/assets/scss/helpers/_color-scheme.scss
@@ -24,7 +24,7 @@ $colors: (
     color: $color;
   }
 
-  .project-module.color-#{$color-key} {
+  .no-touch .project-module.color-#{$color-key} {
     &::before,
     &::after {
       background: $color;
