--- a/web/assets/scss/components/_filters.scss
+++ b/web/assets/scss/components/_filters.scss
@@ -61,7 +61,7 @@ body.nav-stuck {
       right: 0;
       top: 6px;
       transform: rotate(180deg);
-      transition: transform .1s $ease;
+      transition: transform 0.1s $ease;
     }
   }
 
