fix 1px white border on homepage, basic styling on /search page if people land there, no search modal on /search

--- a/web/assets/scss/components/_layout.scss
+++ b/web/assets/scss/components/_layout.scss
@@ -10,10 +10,6 @@
     }
   }
 
-  // @include media-xl {
-  //   padding-left: $sidebar-max-width;
-  // }
-
   .right-col {
     display: flex;
     min-height: 100vh;
@@ -33,6 +29,9 @@ body.page-search {
   .right-col-wrap {
     @include media-lg {
       padding-left: 0;
+      .right-col {
+        border: none;
+      }
     }
     @include media-xl {
       padding-left: 0;
