switch to main.js for consistency, specifically set no-cache headers on ajax requests

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -13,4 +13,4 @@
   <div class="copyright footer-block">&copy;{{ "now"|date("Y") }} Affiliated Engineers, Inc.</div>
 </footer>
 
-<script src="{{ rev('js/site.js') }}"></script>
+<script src="{{ rev('js/main.js') }}"></script>
