--- a/web/assets/scss/components/_search.scss
+++ b/web/assets/scss/components/_search.scss
@@ -137,9 +137,9 @@
   flex-wrap: wrap;
   overflow-x: hidden;
 
-  // @include media-md {
-  //   margin-top: 12*$beat;
-  // }
+  @include media-md {
+    margin-top: 12*$beat;
+  }
 
   h2 {
     @include font-details;
@@ -207,10 +207,6 @@
   .no-results {
     @include font-p;
     color: red;
-
-    @include media-lg {
-      padding: 0 $padding-lg;
-    }
   }
 
   .search-article {
