make single people images centered instead of top center, add padding at bottom of no-results div of search

--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -23,7 +23,7 @@
     <div class="hero-wrap">
       <div class="hero-image image-wrap">
         {% if headerImage %}
-          <div class="lazy image -top-weight" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
+          <div class="lazy image" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
         {% endif %}
       </div>
     </div>
