--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -7,6 +7,7 @@
 {% set projectColor = (project.colorSwatch.label ?? null) ? project.colorSwatch.label|lower : 'black' %}
 
 <article class="project module project-module bigclicky color-{{ projectColor }}">
+  <div class="view-project">View Project <svg class="icon icon-right-arrow" aria-hidden="true" role="presentation"><use xlink:href="#icon-right-arrow"/></svg></div>
   <div class="image-wrap -{{ projectAspectRatio }}">
     {% if projectImage %}
       <div class="project-image lazy image" style="background-image: url('');" data-original="{{ projectImage.getUrl('thumb') }}"></div>
