fix bold italic declaration

--- a/web/assets/scss/helpers/_typography.scss
+++ b/web/assets/scss/helpers/_typography.scss
@@ -50,7 +50,7 @@
     font-family: 'AEI Formular';
     src: url('../../fonts/formular-bolditalic-webfont.woff2') format('woff2'),
          url('../../fonts/formular-bolditalic-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 500;
     font-style: italic;
 }
 
