--- a/web/assets/scss/helpers/_typography.scss
+++ b/web/assets/scss/helpers/_typography.scss
@@ -7,7 +7,7 @@
 
 .font-smoothing { @include font-smoothing; }
 
-// Formular Font Files (excluded from repo.  They will need to be manually added.)
+// Formular Font Files (excluded from repo; they need to be manually added)
 
 // Regular
 @font-face {
