--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <ul class="row -halves -separators semantic-only-list hr-top-concrete-light hr-bottom-concrete-light">
-      {% for post in relatedPosts %}
+      {% for post in relatedPosts.all() %}
         <li class="row-block separate">
           {% include 'news/_article' %}
         </li>
