initial truncateList function to reduce long awards lists

--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -84,7 +84,7 @@
             <div class="meta-item -full">
               <h3>Awards</h3>
               <div class="content -spaced">
-                <ul class="semantic-only-list">
+                <ul class="semantic-only-list truncate-list">
                   {% for award in entry.projectAwards.all() %}
                     <li>{{ award.title }}</li>
                   {% endfor %}
